--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -239,7 +239,39 @@ img {
 
 
 /*==================== HOME ====================*/
+.home__container{
+    gap: 1rem;
 
+}
+.home__content{
+    grid-template-columns: .5fr 3fr;
+    padding-top: 3.5rem;
+    align-items: center;
+}
+.home__social{
+    display: grid;
+    grid-template-columns: max-content;
+    row-gap: 1rem;
+}
+
+.home__social-icon:hover {
+  color: var(--first-color);
+}
+
+.home__img {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 260px;
+}
+
+.home__blob {
+  fill: var(--first-color);
+}
+
+.home__blob-img {
+  width: 240px;
+}
 
 /*==================== BUTTONS ====================*/
 
