--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -266,15 +266,38 @@ img {
 }
 
 .home__blob {
-  fill: var(--first-color);
+    width: 200px;
+    fill: var(--first-color);
 }
 
 .home__blob-img {
   width: 240px;
 }
+.home__data {
+  grid-column: 1/3;
+}
+.home__title{
+    font-size: var(--big-font-size);
+}
+.home__subtitle{
+    font-size: var(--h3-font-size);
+    color: var(--text-color);
+    font-weight: var(--font-medium);
+    margin-bottom: var(--mb-0-75);
+}
 
+.home__description{
+    margin-bottom: var(--mb-2);
+}
 /*==================== BUTTONS ====================*/
-
+.button{
+    display: inline-block;
+    background-color: var(--first-color);
+    color: #FFF;
+    padding: 1rem;
+    border-radius: .5rem;
+    font-weight: var(--font-medium);
+}
 
 /*==================== ABOUT ====================*/
 
