--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -296,7 +296,22 @@ img {
     color: #FFF;
     padding: 1rem;
     border-radius: .5rem;
-    font-weight: var(--font-medium);
+    font-weight: var(--font-semi);
+    transition: .3s;
+}
+.button:hover {
+  box-shadow: 0px 10px 36px rgba(0, 0, 0, 0.15);
+}
+
+.button__icon{
+    font-size: 1.25rem;
+    margin-left; var(--mb-0-5);
+    transition: .3s;
+}
+
+.button--flex{
+    display: inline-flex;
+    align-items: center;
 }
 
 /*==================== ABOUT ====================*/
